crates/oxc_react_compiler/tests/snapshots/error.invalid-type-provider-hooklike-module-default-not-hook.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-type-provider-hooklike-module-default-not-hook.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Config: Invalid type configuration for module", labels: [LabeledSpan { label: None, span: Span { start: 89, end: 92 }, primary: false }], help: Some("Expected type for `import ... from 'useDefaultExportNotTypedAsHook'` to be a hook based on the module name"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
