crates/oxc_react_compiler/tests/snapshots/error.invalid-type-provider-nonhook-name-typed-as-hook.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-type-provider-nonhook-name-typed-as-hook.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Config: Invalid type configuration for module", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 94, length: 19 }, primary: false }], help: Some("Expected type for object property 'useHookNotTypedAsHook' from module 'ReactCompilerTest' to be a hook based on the property name"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
