crates/oxc_react_compiler/tests/snapshots/error.invalid-unconditional-set-state-prop-in-render.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-unconditional-set-state-prop-in-render.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] RenderSetState: Cannot call setState during render", labels: [LabeledSpan { label: Some("Found setState() in render"), span: Span { start: 128, end: 132 }, primary: false }], help: Some("Calling setState during render may trigger an infinite loop.\n* To reset state when other state/props change, store the previous value in state and update conditionally: https://react.dev/reference/react/useState#storing-information-from-previous-renders\n* To derive data from other state/props, compute the derived data during render without using state"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] RenderSetState: Cannot call setState during render", labels: [LabeledSpan { label: Some("Found setState() in render"), span: Span { start: 139, end: 146 }, primary: false }], help: Some("Calling setState during render may trigger an infinite loop.\n* To reset state when other state/props change, store the previous value in state and update conditionally: https://react.dev/reference/react/useState#storing-information-from-previous-renders\n* To derive data from other state/props, compute the derived data during render without using state"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
